[project]
name = "atmacup17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "lightning>=2.4.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.3",
    "mypy>=1.11.2",
    "tensorboard>=2.17.1",
    "torch-tb-profiler>=0.4.3",
]
