[project]
name = "atmacup17"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.2",
    "lightning>=2.4.0",
    "scikit-learn>=1.5.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.3",
    "mypy>=1.11.2",
    "wandb>=0.17.8",
]
